# semester_6

./: .gitignore  README.md
1-lecture/: index.html
1-stripe/: index.html
10-env/node/: app.js  package.json
10-env/python/: main.py  pyproject.toml
11-databaseDocumentation/: helper.txt
12-openAPI/node/: app.js  package-lock.json  package.json
12-openAPI/node/routers/: users.js
12-openAPI/pyhton/: main.py  pyproject.toml
12-openAPI/pyhton/routers/: __init__.py  spacecraft_router.py
13-mandatory-1/: helper.txt  index.html  mysqlsampledatabase.sql
14-SSE/node/: app.js
14-SSE/node/public/: index.html
14-SSE/python/: main.py  pyproject.toml
14-SSE/python/templates/: index.html
15-webhooks/node/: app.js
15-webhooks/python/: helper.txt
16-webhookHW+mandatory/node/serverA/: Dockerfile  package.json
16-webhookHW/node/serverA/: Dockerfile  app.js  package-lock.json  package.json
16-webhookHW/node/serverA/database/: database.json  databaseService.js
16-webhookHW/node/serverA/public/: index.html
16-webhookHW/node/serverA/routers/: hooks.js  users.js
16-webhookHW/node/serverA/routes/: hooks.js  users.js
16-webhookHW/node/serverB/: app.js  package-lock.json
17-azure/: helper.txt
18-web-sockets/node/: client.js  index.html  package-lock.json  package.json  server.js
18-web-sockets/python/: main.py  pyproject.toml
19-cors/: helper.txt
2-modules/python/: .gitignore  main.py
2-modules/python/my_module/: __init__.py  file_one.py  file_two.py
20-cronjobs/: helper.txt
21-mandatory2-auth/: README.md  app.js  package-lock.json  package.json
21-mandatory2-auth/views/pages/: index.ejs  success.ejs
22-redis/: helper.txt
22-redis/node/: index.js  package-lock.json  package.json
22-redis/python/basic/: main.py  pyproject.toml
22-redis/python/pub-sub/: pyproject.toml  subscriber.py
22-redis/python/task-queues/: pyproject.toml  scheduler.py  utils.py  worker.py
23-multimedia-form/: index.html
23-multimedia-form/node/: app.js  package-lock.json  package.json
23-multimedia-form/python/: main.py  pyproject.toml
24-webscraping/node/: index.html  index.js  package-lock.json  package.json
24-webscraping/python/data-scraper/: data_scraper.py  pyproject.toml
24-webscraping/python/scrapy-basic/: helper.txt  pyproject.toml
24-webscraping/python/scrapy-wiki/: pyproject.toml
24-webscraping/python/scrapy-wiki/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
24-webscraping/python/web-crawler/: pyproject.toml
25-graphql/node/: app.js  package-lock.json  package.json
25-graphql/node/database/: blogs.js  users.js
25-graphql/node/graphql/resolvers/: blogsResolvers.js  usersResolver.js
25-graphql/node/graphql/schema/: schema.graphql
26-sqlite/node/: database.db  index.js  package-lock.json  package.json
26-sqlite/node/database/: connection.js
27-mandatory2-scraping/node/: database.db  index.html  index.js  package-lock.json  package.json
3-parseHW/files/: me.csv  me.json  me.txt  me.xml  me.yaml
3-parseHW/node/: index.js  package-lock.json  package.json
3-parseHW/node/scripts/: csvParser.js  jsonParser.js  textParser.js  xmlParser.js  yamlParser.js
3-parseHW/python/scripts/: csv_parser.py  json_parser.py  txt_parser.py  xml_parser.py  yaml_parser.py
4-decoding/: main.py
5-testPoetry/: helper.txt  pyproject.toml
6-servers/python/: helper.txt  main.py  pyproject.toml
7-serversHW/node/: app.js  package-lock.json  package.json
7-serversHW/python/: bla.py  main.py  pyproject.toml
8-date/python/: main.py
9-server-to-server/: helper.txt
9-server-to-server/node/: app.js
9-server-to-server/python/: main.py
