[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Šimon Bučko <sibu@queue-it.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
jinja2 = "^3.1.2"
sse-starlette = "^1.2.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
