[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Šimon Bučko <sibu@queue-it.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
