[tool.poetry]
name = "pub-sub"
version = "0.1.0"
description = ""
authors = ["Šimon Bučko <sibu@queue-it.com>"]
readme = "README.md"
packages = [{include = "pub_sub"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
