[tool.poetry]
name = "data-scraper"
version = "0.1.0"
description = ""
authors = ["Šimon Bučko <sibu@queue-it.com>"]
readme = "README.md"
packages = [{include = "data_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.30.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
